5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/226/users/4137/executions/1674_1105.log
== TEST (2019-04-25 11:11:37) 
-- CODE:
# Teste seu código aos poucos. Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo. Teste as diversas possibilidades de saída
b = input("Brasao:")

print("Entrada:", b)

if(b == "lobo"):
	print(Stark)
-- OUTPUT:
Entrada: lula
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-25 11:11:42) 
-- CODE:
# Teste seu código aos poucos. Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo. Teste as diversas possibilidades de saída
b = input("Brasao:")

print("Entrada:", b)

if(b == "lobo"):
	print("Stark")
-- OUTPUT:
Entrada: lula
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-25 11:12:02) 
-- CODE:
# Teste seu código aos poucos. Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo. Teste as diversas possibilidades de saída
b = input("Brasao:")

print("Entrada:", b)

if(b*lower() == "lobo"):
	print("Stark")
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    if(b*lower() == "lobo"):
NameError: name 'lower' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-25 11:12:10) 
-- CODE:
# Teste seu código aos poucos. Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo. Teste as diversas possibilidades de saída
b = input("Brasao:")

print("Entrada:", b)

if(b.lower() == "lobo"):
	print("Stark")
-- OUTPUT:
Entrada: lula
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-25 11:12:26) 
-- CODE:
# Teste seu código aos poucos. Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo. Teste as diversas possibilidades de saída
b = input("Brasao:").lower()

print("Entrada:", b)

if(b == "lobo"):
	print("Stark")
-- EXECUTION TIME:
0.194584
-- TEST CASE 1:
---- input:
lula
---- correct output:
Entrada: lula
Casa: Greyjoy
---- user output:
Entrada: lula
-- TEST CASE 2:
---- input:
tambaqui
---- correct output:
Entrada: tambaqui
Brasao invalido
---- user output:
Entrada: tambaqui
-- TEST CASE 3:
---- input:
dragao
---- correct output:
Entrada: dragao
Casa: Targaryen
---- user output:
Entrada: dragao
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-25 11:12:27) 
-- CODE:
# Teste seu código aos poucos. Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo. Teste as diversas possibilidades de saída
b = input("Brasao:").lower()

print("Entrada:", b)

if(b == "lobo"):
	print("Stark")
-- OUTPUT:
Entrada: lula
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-25 11:20:37) 
-- CODE:
# Teste seu código aos poucos. Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo. Teste as diversas possibilidades de saída
b = input("Brasao:").lower()

print("Entrada:", b)

if(b == "lobo"):
	print("Stark")
elif(b == "leao"):
	print("Lannister")
elif(b == "Veado"):
	print("Baratheon")
elif(b == "dragao"):
	print("Targaryen")
elif(b == "rosa"):
	print("Tyrell")
elif(b == "sol"):
	print("Martell")
elif(b == "lula"):
	print("Greyjoy")
elif(b == "esfolado"):
	print("Bolton")
elif(b == "Turta"):
	print("Tully")
elif(b != "lobo" and b != "leao" and b != "veado" and b != "dragao" and b != "rosa" and b != "sol" and b != "lula" and b != "esfolado" and )	elif(b != "lobo" and b != "leao" and b != "veado" and b != "dragao" and b != "rosa" and b != "sol" and b != "lula" and b != "esfolado" and b!= "turta"):
	print("Brasao invalido")
-- EXECUTION TIME:
0.148379
-- ERROR:
  File "/home/codebench/codes/1674/1105/main.py", line 25
    elif(b != "lobo" and b != "leao" and b != "veado" and b != "dragao" and b != "rosa" and b != "sol" and b != "lula" and b != "esfolado" and )	elif(b != "lobo" and b != "leao" and b != "veado" and b != "dragao" and b != "rosa" and b != "sol" and b != "lula" and b != "esfolado" and b!= "turta"):
                                                                                                                                               ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-25 11:20:39) 
-- CODE:
# Teste seu código aos poucos. Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo. Teste as diversas possibilidades de saída
b = input("Brasao:").lower()

print("Entrada:", b)

if(b == "lobo"):
	print("Stark")
elif(b == "leao"):
	print("Lannister")
elif(b == "Veado"):
	print("Baratheon")
elif(b == "dragao"):
	print("Targaryen")
elif(b == "rosa"):
	print("Tyrell")
elif(b == "sol"):
	print("Martell")
elif(b == "lula"):
	print("Greyjoy")
elif(b == "esfolado"):
	print("Bolton")
elif(b == "Turta"):
	print("Tully")
elif(b != "lobo" and b != "leao" and b != "veado" and b != "dragao" and b != "rosa" and b != "sol" and b != "lula" and b != "esfolado" and )	elif(b != "lobo" and b != "leao" and b != "veado" and b != "dragao" and b != "rosa" and b != "sol" and b != "lula" and b != "esfolado" and b!= "turta"):
	print("Brasao invalido")
-- ERROR:
File "XXXX", line 25
    elif(b != "lobo" and b != "leao" and b != "veado" and b != "dragao" and b != "rosa" and b != "sol" and b != "lula" and b != "esfolado" and )	elif(b != "lobo" and b != "leao" and b != "veado" and b != "dragao" and b != "rosa" and b != "sol" and b != "lula" and b != "esfolado" and b!= "turta"):
                                                                                                                                               ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-25 11:22:37) 
-- CODE:
# Teste seu código aos poucos. Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo. Teste as diversas possibilidades de saída
b = input("Brasao:").lower()

print("Entrada:", b)

if(b == "lobo"):
	print("Stark")
elif(b == "leao"):
	print("Lannister")
elif(b == "Veado"):
	print("Baratheon")
elif(b == "dragao"):
	print("Targaryen")
elif(b == "rosa"):
	print("Tyrell")
elif(b == "sol"):
	print("Martell")
elif(b == "lula"):
	print("Greyjoy")
elif(b == "esfolado"):
	print("Bolton")
elif(b == "Turta"):
	print("Tully")
elif(b != "lobo" and b != "leao" and b != "veado" and b != "dragao" and b != "rosa" and b != "sol" and b != "lula" and b != "esfolado" and b != "turta"):
	print("Brasao invalido")
-- EXECUTION TIME:
0.142908
-- TEST CASE 1:
---- input:
lula
---- correct output:
Entrada: lula
Casa: Greyjoy
---- user output:
Entrada: lula
Greyjoy
-- TEST CASE 2:
---- input:
tambaqui
---- correct output:
Entrada: tambaqui
Brasao invalido
---- user output:
Entrada: tambaqui
Brasao invalido
-- TEST CASE 3:
---- input:
dragao
---- correct output:
Entrada: dragao
Casa: Targaryen
---- user output:
Entrada: dragao
Targaryen
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-25 11:22:39) 
-- CODE:
# Teste seu código aos poucos. Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo. Teste as diversas possibilidades de saída
b = input("Brasao:").lower()

print("Entrada:", b)

if(b == "lobo"):
	print("Stark")
elif(b == "leao"):
	print("Lannister")
elif(b == "Veado"):
	print("Baratheon")
elif(b == "dragao"):
	print("Targaryen")
elif(b == "rosa"):
	print("Tyrell")
elif(b == "sol"):
	print("Martell")
elif(b == "lula"):
	print("Greyjoy")
elif(b == "esfolado"):
	print("Bolton")
elif(b == "Turta"):
	print("Tully")
elif(b != "lobo" and b != "leao" and b != "veado" and b != "dragao" and b != "rosa" and b != "sol" and b != "lula" and b != "esfolado" and b != "turta"):
	print("Brasao invalido")
-- EXECUTION TIME:
0.174477
-- TEST CASE 1:
---- input:
lula
---- correct output:
Entrada: lula
Casa: Greyjoy
---- user output:
Entrada: lula
Greyjoy
-- TEST CASE 2:
---- input:
tambaqui
---- correct output:
Entrada: tambaqui
Brasao invalido
---- user output:
Entrada: lula
Greyjoy
-- TEST CASE 3:
---- input:
dragao
---- correct output:
Entrada: dragao
Casa: Targaryen
---- user output:
Entrada: lula
Greyjoy
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-25 11:22:39) 
-- CODE:
# Teste seu código aos poucos. Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo. Teste as diversas possibilidades de saída
b = input("Brasao:").lower()

print("Entrada:", b)

if(b == "lobo"):
	print("Stark")
elif(b == "leao"):
	print("Lannister")
elif(b == "Veado"):
	print("Baratheon")
elif(b == "dragao"):
	print("Targaryen")
elif(b == "rosa"):
	print("Tyrell")
elif(b == "sol"):
	print("Martell")
elif(b == "lula"):
	print("Greyjoy")
elif(b == "esfolado"):
	print("Bolton")
elif(b == "Turta"):
	print("Tully")
elif(b != "lobo" and b != "leao" and b != "veado" and b != "dragao" and b != "rosa" and b != "sol" and b != "lula" and b != "esfolado" and b != "turta"):
	print("Brasao invalido")
-- EXECUTION TIME:
0.155377
-- TEST CASE 1:
---- input:
lula
---- correct output:
Entrada: lula
Casa: Greyjoy
---- user output:
Entrada: lula
Greyjoy
-- TEST CASE 2:
---- input:
tambaqui
---- correct output:
Entrada: tambaqui
Brasao invalido
---- user output:
Entrada: lula
Greyjoy
-- TEST CASE 3:
---- input:
dragao
---- correct output:
Entrada: dragao
Casa: Targaryen
---- user output:
Entrada: tambaqui
Brasao invalido
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-25 11:22:39) 
-- CODE:
# Teste seu código aos poucos. Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo. Teste as diversas possibilidades de saída
b = input("Brasao:").lower()

print("Entrada:", b)

if(b == "lobo"):
	print("Stark")
elif(b == "leao"):
	print("Lannister")
elif(b == "Veado"):
	print("Baratheon")
elif(b == "dragao"):
	print("Targaryen")
elif(b == "rosa"):
	print("Tyrell")
elif(b == "sol"):
	print("Martell")
elif(b == "lula"):
	print("Greyjoy")
elif(b == "esfolado"):
	print("Bolton")
elif(b == "Turta"):
	print("Tully")
elif(b != "lobo" and b != "leao" and b != "veado" and b != "dragao" and b != "rosa" and b != "sol" and b != "lula" and b != "esfolado" and b != "turta"):
	print("Brasao invalido")
-- OUTPUT:
Entrada: lula
Greyjoy
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-25 11:22:39) 
-- CODE:
# Teste seu código aos poucos. Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo. Teste as diversas possibilidades de saída
b = input("Brasao:").lower()

print("Entrada:", b)

if(b == "lobo"):
	print("Stark")
elif(b == "leao"):
	print("Lannister")
elif(b == "Veado"):
	print("Baratheon")
elif(b == "dragao"):
	print("Targaryen")
elif(b == "rosa"):
	print("Tyrell")
elif(b == "sol"):
	print("Martell")
elif(b == "lula"):
	print("Greyjoy")
elif(b == "esfolado"):
	print("Bolton")
elif(b == "Turta"):
	print("Tully")
elif(b != "lobo" and b != "leao" and b != "veado" and b != "dragao" and b != "rosa" and b != "sol" and b != "lula" and b != "esfolado" and b != "turta"):
	print("Brasao invalido")
-- EXECUTION TIME:
0.299751
-- ERROR:
sh: 1: cannot open /home/codebench/codes/1674/1105/cbtemp.txt: No such file

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-25 11:22:39) 
-- CODE:
# Teste seu código aos poucos. Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo. Teste as diversas possibilidades de saída
b = input("Brasao:").lower()

print("Entrada:", b)

if(b == "lobo"):
	print("Stark")
elif(b == "leao"):
	print("Lannister")
elif(b == "Veado"):
	print("Baratheon")
elif(b == "dragao"):
	print("Targaryen")
elif(b == "rosa"):
	print("Tyrell")
elif(b == "sol"):
	print("Martell")
elif(b == "lula"):
	print("Greyjoy")
elif(b == "esfolado"):
	print("Bolton")
elif(b == "Turta"):
	print("Tully")
elif(b != "lobo" and b != "leao" and b != "veado" and b != "dragao" and b != "rosa" and b != "sol" and b != "lula" and b != "esfolado" and b != "turta"):
	print("Brasao invalido")
-- EXECUTION TIME:
0.178062
-- TEST CASE 1:
---- input:
lula
---- correct output:
Entrada: lula
Casa: Greyjoy
---- user output:
Entrada: dragao
Targaryen
-- TEST CASE 2:
---- input:
tambaqui
---- correct output:
Entrada: tambaqui
Brasao invalido
---- user output:
Brasao:Entrada: dragao
Targaryen
-- TEST CASE 3:
---- input:
dragao
---- correct output:
Entrada: dragao
Casa: Targaryen
---- user output:
Brasao:Entrada: dragao
Targaryen
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-25 11:22:39) 
-- CODE:
# Teste seu código aos poucos. Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo. Teste as diversas possibilidades de saída
b = input("Brasao:").lower()

print("Entrada:", b)

if(b == "lobo"):
	print("Stark")
elif(b == "leao"):
	print("Lannister")
elif(b == "Veado"):
	print("Baratheon")
elif(b == "dragao"):
	print("Targaryen")
elif(b == "rosa"):
	print("Tyrell")
elif(b == "sol"):
	print("Martell")
elif(b == "lula"):
	print("Greyjoy")
elif(b == "esfolado"):
	print("Bolton")
elif(b == "Turta"):
	print("Tully")
elif(b != "lobo" and b != "leao" and b != "veado" and b != "dragao" and b != "rosa" and b != "sol" and b != "lula" and b != "esfolado" and b != "turta"):
	print("Brasao invalido")
-- EXECUTION TIME:
0.283612
-- ERROR:
sh: 1: cannot open /home/codebench/codes/1674/1105/cbtemp.txt: No such file

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-25 11:22:46) 
-- CODE:
# Teste seu código aos poucos. Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo. Teste as diversas possibilidades de saída
b = input("Brasao:").lower()

print("Entrada:", b)

if(b == "lobo"):
	print("Stark")
elif(b == "leao"):
	print("Lannister")
elif(b == "Veado"):
	print("Baratheon")
elif(b == "dragao"):
	print("Targaryen")
elif(b == "rosa"):
	print("Tyrell")
elif(b == "sol"):
	print("Martell")
elif(b == "lula"):
	print("Greyjoy")
elif(b == "esfolado"):
	print("Bolton")
elif(b == "Turta"):
	print("Tully")
elif(b != "lobo" and b != "leao" and b != "veado" and b != "dragao" and b != "rosa" and b != "sol" and b != "lula" and b != "esfolado" and b != "turta"):
	print("Brasao invalido")
-- OUTPUT:
Entrada: lula
Greyjoy
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-25 11:22:50) 
-- CODE:
# Teste seu código aos poucos. Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo. Teste as diversas possibilidades de saída
b = input("Brasao:").lower()

print("Entrada:", b)

if(b == "lobo"):
	print("Stark")
elif(b == "leao"):
	print("Lannister")
elif(b == "Veado"):
	print("Baratheon")
elif(b == "dragao"):
	print("Targaryen")
elif(b == "rosa"):
	print("Tyrell")
elif(b == "sol"):
	print("Martell")
elif(b == "lula"):
	print("Greyjoy")
elif(b == "esfolado"):
	print("Bolton")
elif(b == "Turta"):
	print("Tully")
elif(b != "lobo" and b != "leao" and b != "veado" and b != "dragao" and b != "rosa" and b != "sol" and b != "lula" and b != "esfolado" and b != "turta"):
	print("Brasao invalido")
-- OUTPUT:
Entrada: lula
Greyjoy
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-25 11:22:58) 
-- CODE:
# Teste seu código aos poucos. Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo. Teste as diversas possibilidades de saída
b = input("Brasao:").lower()

print("Entrada:", b)

if(b == "lobo"):
	print("Stark")
elif(b == "leao"):
	print("Lannister")
elif(b == "Veado"):
	print("Baratheon")
elif(b == "dragao"):
	print("Targaryen")
elif(b == "rosa"):
	print("Tyrell")
elif(b == "sol"):
	print("Martell")
elif(b == "lula"):
	print("Greyjoy")
elif(b == "esfolado"):
	print("Bolton")
elif(b == "Turta"):
	print("Tully")
elif(b != "lobo" and b != "leao" and b != "veado" and b != "dragao" and b != "rosa" and b != "sol" and b != "lula" and b != "esfolado" and b != "turta"):
	print("Brasao invalido")
-- OUTPUT:
Entrada: lula
Greyjoy
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-25 11:23:14) 
-- CODE:
# Teste seu código aos poucos. Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo. Teste as diversas possibilidades de saída
b = input("Brasao:").lower()

print("Entrada:", b)

if(b == "lobo"):
	print("Stark")
elif(b == "leao"):
	print("Lannister")
elif(b == "Veado"):
	print("Baratheon")
elif(b == "dragao"):
	print("Targaryen")
elif(b == "rosa"):
	print("Tyrell")
elif(b == "sol"):
	print("Martell")
elif(b == "lula"):
	print("Greyjoy")
elif(b == "esfolado"):
	print("Bolton")
elif(b == "Turta"):
	print("Tully")
elif(b != "lobo" and b != "leao" and b != "veado" and b != "dragao" and b != "rosa" and b != "sol" and b != "lula" and b != "esfolado" and b != "turta"):
	print("Brasao invalido")
-- OUTPUT:
Entrada: lula
Greyjoy
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-25 11:23:22) 
-- CODE:
# Teste seu código aos poucos. Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo. Teste as diversas possibilidades de saída
b = input("Brasao:").lower()

print("Entrada:", b)

if(b == "lobo"):
	print("Stark")
elif(b == "leao"):
	print("Lannister")
elif(b == "Veado"):
	print("Baratheon")
elif(b == "dragao"):
	print("Targaryen")
elif(b == "rosa"):
	print("Tyrell")
elif(b == "sol"):
	print("Martell")
elif(b == "lula"):
	print("Greyjoy")
elif(b == "esfolado"):
	print("Bolton")
elif(b == "Turta"):
	print("Tully")
elif(b != "lobo" and b != "leao" and b != "veado" and b != "dragao" and b != "rosa" and b != "sol" and b != "lula" and b != "esfolado" and b != "turta"):
	print("Brasao invalido")
-- OUTPUT:
Entrada: lula
Greyjoy
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-25 11:23:52) 
-- CODE:
# Teste seu código aos poucos. Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo. Teste as diversas possibilidades de saída
b = input("Brasao:").lower()

print("Entrada:", b)

if(b == "lobo"):
	print("Stark")
elif(b == "leao"):
	print("Lannister")
elif(b == "Veado"):
	print("Baratheon")
elif(b == "dragao"):
	print("Targaryen")
elif(b == "rosa"):
	print("Tyrell")
elif(b == "sol"):
	print("Martell")
elif(b == "lula"):
	print("Greyjoy")
elif(b == "esfolado"):
	print("Bolton")
elif(b == "Turta"):
	print("Tully")
elif(b != "lobo" and b != "leao" and b != "veado" and b != "dragao" and b != "rosa" and b != "sol" and b != "lula" and b != "esfolado" and b != "turta"):
	print("Brasao invalido")
-- OUTPUT:
Entrada: lula
Greyjoy
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-25 11:24:09) 
-- CODE:
# Teste seu código aos poucos. Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo. Teste as diversas possibilidades de saída
b = input("Brasao:").lower()

print("Entrada:", b)

if(b == "lobo"):
	print("Stark")
elif(b == "leao"):
	print("Lannister")
elif(b == "Veado"):
	print("Baratheon")
elif(b == "dragao"):
	print("Targaryen")
elif(b == "rosa"):
	print("Tyrell")
elif(b == "sol"):
	print("Martell")
elif(b == "lula"):
	print("Greyjoy")
elif(b == "esfolado"):
	print("Bolton")
elif(b == "Turta"):
	print("Tully")
elif(b != "lobo" and b != "leao" and b != "veado" and b != "dragao" and b != "rosa" and b != "sol" and b != "lula" and b != "esfolado" and b != "turta"):
	print("Brasao invalido")
-- OUTPUT:
Entrada: lula
Greyjoy
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-25 11:24:14) 
-- CODE:
# Teste seu código aos poucos. Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo. Teste as diversas possibilidades de saída
b = input("Brasao:").lower()

print("Entrada:", b)

if(b == "lobo"):
	print("Stark")
elif(b == "leao"):
	print("Lannister")
elif(b == "Veado"):
	print("Baratheon")
elif(b == "dragao"):
	print("Targaryen")
elif(b == "rosa"):
	print("Tyrell")
elif(b == "sol"):
	print("Martell")
elif(b == "lula"):
	print("Greyjoy")
elif(b == "esfolado"):
	print("Bolton")
elif(b == "Turta"):
	print("Tully")
elif(b != "lobo" and b != "leao" and b != "veado" and b != "dragao" and b != "rosa" and b != "sol" and b != "lula" and b != "esfolado" and b != "turta"):
	print("Brasao invalido")
-- OUTPUT:
Entrada: lula
Greyjoy
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-25 11:24:19) 
-- CODE:
# Teste seu código aos poucos. Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo. Teste as diversas possibilidades de saída
b = input("Brasao:").lower()

print("Entrada:", b)

if(b == "lobo"):
	print("Stark")
elif(b == "leao"):
	print("Lannister")
elif(b == "Veado"):
	print("Baratheon")
elif(b == "dragao"):
	print("Targaryen")
elif(b == "rosa"):
	print("Tyrell")
elif(b == "sol"):
	print("Martell")
elif(b == "lula"):
	print("Greyjoy")
elif(b == "esfolado"):
	print("Bolton")
elif(b == "Turta"):
	print("Tully")
elif(b != "lobo" and b != "leao" and b != "veado" and b != "dragao" and b != "rosa" and b != "sol" and b != "lula" and b != "esfolado" and b != "turta"):
	print("Brasao invalido")
-- OUTPUT:
Entrada: lula
Greyjoy
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-25 11:24:36) 
-- CODE:
# Teste seu código aos poucos. Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo. Teste as diversas possibilidades de saída
b = input("Brasao:").lower()

print("Entrada:", b)

if(b == "lobo"):
	print("Stark")
elif(b == "leao"):
	print("Lannister")
elif(b == "Veado"):
	print("Baratheon)
elif(b == "dragao"):
	print("Targaryen")
elif(b == "rosa"):
	print("Tyrell")
elif(b == "sol"):
	print("Martell")
elif(b == "lula"):
	print("Greyjoy")
elif(b == "esfolado"):
	print("Bolton")
elif(b == "Turta"):
	print("Tully")
elif(b != "lobo" and b != "leao" and b != "veado" and b != "dragao" and b != "rosa" and b != "sol" and b != "lula" and b != "esfolado" and b != "turta"):
	print("Brasao invalido")
-- ERROR:
File "XXXX", line 12
    print("Baratheon)
                    ^
SyntaxError: EOL while scanning string literal
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-25 11:24:44) 
-- CODE:
# Teste seu código aos poucos. Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo. Teste as diversas possibilidades de saída
b = input("Brasao:").lower()

print("Entrada:", b)

if(b == "lobo"):
	print("Stark")
elif(b == "leao"):
	print("Lannister")
elif(b == "Veado"):
	print("Baratheon")
elif(b == "dragao"):
	print("Targaryen")
elif(b == "rosa"):
	print("Tyrell")
elif(b == "sol"):
	print("Martell")
elif(b == "lula"):
	print("Greyjoy")
elif(b == "esfolado"):
	print("Bolton")
elif(b == "Turta"):
	print("Tully")
elif(b != "lobo" and b != "leao" and b != "veado" and b != "dragao" and b != "rosa" and b != "sol" and b != "lula" and b != "esfolado" and b != "turta"):
	print("Brasao invalido")
-- OUTPUT:
Entrada: lula
Greyjoy
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-25 11:24:59) 
-- CODE:
# Teste seu código aos poucos. Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo. Teste as diversas possibilidades de saída
b = input("Brasao:").lower()

print("Entrada:", b)

if(b == "lobo"):
	print("Stark")
elif(b == "leao"):
	print("Lannister")
elif(b == "Veado"):
	print("Baratheon")
elif(b == "dragao"):
	print("Targaryen")
elif(b == "rosa"):
	print("Tyrell")
elif(b == "sol"):
	print("Martell")
elif(b == "lula"):
	print("Greyjoy")
elif(b == "esfolado"):
	print("Bolton")
elif(b == "Turta"):
	print("Tully")
elif(b != "lobo" and b != "leao" and b != "veado" and b != "dragao" and b != "rosa" and b != "sol" and b != "lula" and b != "esfolado" and b != "turta"):
	print("Brasao invalido")
-- OUTPUT:
Entrada: lula
Greyjoy
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-25 11:25:03) 
-- CODE:
# Teste seu código aos poucos. Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo. Teste as diversas possibilidades de saída
b = input("Brasao:").lower()

print("Entrada:", b)

if(b == "lobo"):
	print("Stark")
elif(b == "leao"):
	print("Lannister")
elif(b == "Veado"):
	print("Baratheon")
elif(b == "dragao"):
	print("Targaryen")
elif(b == "rosa"):
	print("Tyrell")
elif(b == "sol"):
	print("Martell")
elif(b == "lula"):
	print("Greyjoy")
elif(b == "esfolado"):
	print("Bolton")
elif(b == "Turta"):
	print("Tully")
elif(b != "lobo" and b != "leao" and b != "veado" and b != "dragao" and b != "rosa" and b != "sol" and b != "lula" and b != "esfolado" and b != "turta"):
	print("Brasao invalido")
-- OUTPUT:
Entrada: lula
Greyjoy
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-25 11:25:06) 
-- CODE:
# Teste seu código aos poucos. Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo. Teste as diversas possibilidades de saída
b = input("Brasao:").lower()

print("Entrada:", b)

if(b == "lobo"):
	print("Stark")
elif(b == "leao"):
	print("Lannister")
elif(b == "Veado"):
	print("Baratheon")
elif(b == "dragao"):
	print("Targaryen")
elif(b == "rosa"):
	print("Tyrell")
elif(b == "sol"):
	print("Martell")
elif(b == "lula"):
	print("Greyjoy")
elif(b == "esfolado"):
	print("Bolton")
elif(b == "Turta"):
	print("Tully")
elif(b != "lobo" and b != "leao" and b != "veado" and b != "dragao" and b != "rosa" and b != "sol" and b != "lula" and b != "esfolado" and b != "turta"):
	print("Brasao invalido")
-- OUTPUT:
Entrada: lula
Greyjoy
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-25 11:25:10) 
-- CODE:
# Teste seu código aos poucos. Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo. Teste as diversas possibilidades de saída
b = input("Brasao:").lower()

print("Entrada:", b)

if(b == "lobo"):
	print("Stark")
elif(b == "leao"):
	print("Lannister")
elif(b == "Veado"):
	print("Baratheon")
elif(b == "dragao"):
	print("Targaryen")
elif(b == "rosa"):
	print("Tyrell")
elif(b == "sol"):
	print("Martell")
elif(b == "lula"):
	print("Greyjoy")
elif(b == "esfolado"):
	print("Bolton")
elif(b == "Turta"):
	print("Tully")
elif(b != "lobo" and b != "leao" and b != "veado" and b != "dragao" and b != "rosa" and b != "sol" and b != "lula" and b != "esfolado" and b != "turta"):
	print("Brasao invalido")
-- OUTPUT:
Entrada: lula
Greyjoy
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-25 11:25:14) 
-- CODE:
# Teste seu código aos poucos. Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo. Teste as diversas possibilidades de saída
b = input("Brasao:").lower()

print("Entrada:", b)

if(b == "lobo"):
	print("Stark")
elif(b == "leao"):
	print("Lannister")
elif(b == "Veado"):
	print("Baratheon")
elif(b == "dragao"):
	print("Targaryen")
elif(b == "rosa"):
	print("Tyrell")
elif(b == "sol"):
	print("Martell")
elif(b == "lula"):
	print("Greyjoy")
elif(b == "esfolado"):
	print("Bolton")
elif(b == "Turta"):
	print("Tully")
elif(b != "lobo" and b != "leao" and b != "veado" and b != "dragao" and b != "rosa" and b != "sol" and b != "lula" and b != "esfolado" and b != "turta"):
	print("Brasao invalido")
-- OUTPUT:
Entrada: lula
Greyjoy
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-25 11:25:32) 
-- CODE:
# Teste seu código aos poucos. Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo. Teste as diversas possibilidades de saída
b = input("Brasao:").lower()

print("Entrada:", b)

if(b == "lobo"):
	print("Stark")
elif(b == "leao"):
	print("Lannister")
elif(b == "veado"):
	print("Baratheon")
elif(b == "dragao"):
	print("Targaryen")
elif(b == "rosa"):
	print("Tyrell")
elif(b == "sol"):
	print("Martell")
elif(b == "lula"):
	print("Greyjoy")
elif(b == "esfolado"):
	print("Bolton")
elif(b == "Turta"):
	print("Tully")
elif(b != "lobo" and b != "leao" and b != "veado" and b != "dragao" and b != "rosa" and b != "sol" and b != "lula" and b != "esfolado" and b != "turta"):
	print("Brasao invalido")
-- EXECUTION TIME:
0.134116
-- TEST CASE 1:
---- input:
lula
---- correct output:
Entrada: lula
Casa: Greyjoy
---- user output:
Entrada: lula
Greyjoy
-- TEST CASE 2:
---- input:
tambaqui
---- correct output:
Entrada: tambaqui
Brasao invalido
---- user output:
Entrada: tambaqui
Brasao invalido
-- TEST CASE 3:
---- input:
dragao
---- correct output:
Entrada: dragao
Casa: Targaryen
---- user output:
Entrada: dragao
Targaryen
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-25 11:25:33) 
-- CODE:
# Teste seu código aos poucos. Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo. Teste as diversas possibilidades de saída
b = input("Brasao:").lower()

print("Entrada:", b)

if(b == "lobo"):
	print("Stark")
elif(b == "leao"):
	print("Lannister")
elif(b == "veado"):
	print("Baratheon")
elif(b == "dragao"):
	print("Targaryen")
elif(b == "rosa"):
	print("Tyrell")
elif(b == "sol"):
	print("Martell")
elif(b == "lula"):
	print("Greyjoy")
elif(b == "esfolado"):
	print("Bolton")
elif(b == "Turta"):
	print("Tully")
elif(b != "lobo" and b != "leao" and b != "veado" and b != "dragao" and b != "rosa" and b != "sol" and b != "lula" and b != "esfolado" and b != "turta"):
	print("Brasao invalido")
-- EXECUTION TIME:
0.266205
-- TEST CASE 1:
---- input:
lula
---- correct output:
Entrada: lula
Casa: Greyjoy
---- user output:
Entrada: lula
Greyjoy
-- TEST CASE 2:
---- input:
tambaqui
---- correct output:
Entrada: tambaqui
Brasao invalido
---- user output:
Brasao:Entrada: tambaqui
Brasao invalido
-- TEST CASE 3:
---- input:
dragao
---- correct output:
Entrada: dragao
Casa: Targaryen
---- user output:
Brasao:Entrada: dragao
Targaryen
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-25 11:25:33) 
-- CODE:
# Teste seu código aos poucos. Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo. Teste as diversas possibilidades de saída
b = input("Brasao:").lower()

print("Entrada:", b)

if(b == "lobo"):
	print("Stark")
elif(b == "leao"):
	print("Lannister")
elif(b == "veado"):
	print("Baratheon")
elif(b == "dragao"):
	print("Targaryen")
elif(b == "rosa"):
	print("Tyrell")
elif(b == "sol"):
	print("Martell")
elif(b == "lula"):
	print("Greyjoy")
elif(b == "esfolado"):
	print("Bolton")
elif(b == "Turta"):
	print("Tully")
elif(b != "lobo" and b != "leao" and b != "veado" and b != "dragao" and b != "rosa" and b != "sol" and b != "lula" and b != "esfolado" and b != "turta"):
	print("Brasao invalido")
-- OUTPUT:
Entrada: lula
Greyjoy
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-25 11:25:51) 
-- CODE:
# Teste seu código aos poucos. Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo. Teste as diversas possibilidades de saída
b = input("Brasao:").lower()

print("Entrada:", b)

if(b == "lobo"):
	print("Stark")
elif(b == "leao"):
	print("Lannister")
elif(b == "veado"):
	print("Baratheon")
elif(b == "dragao"):
	print("Targaryen")
elif(b == "rosa"):
	print("Tyrell")
elif(b == "sol"):
	print("Martell")
elif(b == "lula"):
	print("Greyjoy")
elif(b == "esfolado"):
	print("Bolton")
elif(b == "Turta"):
	print("Tully")
elif(b != "lobo" and b != "leao" and b != "veado" and b != "dragao" and b != "rosa" and b != "sol" and b != "lula" and b != "esfolado" and b != "turta"):
	print("Brasao invalido")
-- OUTPUT:
Entrada: lula
Greyjoy
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-25 11:25:58) 
-- CODE:
# Teste seu código aos poucos. Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo. Teste as diversas possibilidades de saída
b = input("Brasao:").lower()

print("Entrada:", b)

if(b == "lobo"):
	print("Stark")
elif(b == "leao"):
	print("Lannister")
elif(b == "veado"):
	print("Baratheon")
elif(b == "dragao"):
	print("Targaryen")
elif(b == "rosa"):
	print("Tyrell")
elif(b == "sol"):
	print("Martell")
elif(b == "lula"):
	print("Greyjoy")
elif(b == "esfolado"):
	print("Bolton")
elif(b == "Turta"):
	print("Tully")
elif(b != "lobo" and b != "leao" and b != "veado" and b != "dragao" and b != "rosa" and b != "sol" and b != "lula" and b != "esfolado" and b != "turta"):
	print("Brasao invalido")
-- OUTPUT:
Entrada: lula
Greyjoy
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-25 11:26:10) 
-- CODE:
# Teste seu código aos poucos. Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo. Teste as diversas possibilidades de saída
b = input("Brasao:").lower()

print("Entrada:", b)

if(b == "lobo"):
	print("Stark")
elif(b == "leao"):
	print("Lannister")
elif(b == "veado"):
	print("Baratheon")
elif(b == "dragao"):
	print("Targaryen")
elif(b == "rosa"):
	print("Tyrell")
elif(b == "sol"):
	print("Martell")
elif(b == "lula"):
	print("Greyjoy")
elif(b == "esfolado"):
	print("Bolton")
elif(b == "turta"):
	print("Tully")
elif(b != "lobo" and b != "leao" and b != "veado" and b != "dragao" and b != "rosa" and b != "sol" and b != "lula" and b != "esfolado" and b != "turta"):
	print("Brasao invalido")
-- EXECUTION TIME:
0.173379
-- TEST CASE 1:
---- input:
lula
---- correct output:
Entrada: lula
Casa: Greyjoy
---- user output:
Entrada: lula
Greyjoy
-- TEST CASE 2:
---- input:
tambaqui
---- correct output:
Entrada: tambaqui
Brasao invalido
---- user output:
Entrada: tambaqui
Brasao invalido
-- TEST CASE 3:
---- input:
dragao
---- correct output:
Entrada: dragao
Casa: Targaryen
---- user output:
Entrada: dragao
Targaryen
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-25 11:26:12) 
-- CODE:
# Teste seu código aos poucos. Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo. Teste as diversas possibilidades de saída
b = input("Brasao:").lower()

print("Entrada:", b)

if(b == "lobo"):
	print("Stark")
elif(b == "leao"):
	print("Lannister")
elif(b == "veado"):
	print("Baratheon")
elif(b == "dragao"):
	print("Targaryen")
elif(b == "rosa"):
	print("Tyrell")
elif(b == "sol"):
	print("Martell")
elif(b == "lula"):
	print("Greyjoy")
elif(b == "esfolado"):
	print("Bolton")
elif(b == "turta"):
	print("Tully")
elif(b != "lobo" and b != "leao" and b != "veado" and b != "dragao" and b != "rosa" and b != "sol" and b != "lula" and b != "esfolado" and b != "turta"):
	print("Brasao invalido")
-- EXECUTION TIME:
0.170656
-- TEST CASE 1:
---- input:
lula
---- correct output:
Entrada: lula
Casa: Greyjoy
---- user output:
Entrada: lula
Greyjoy
-- TEST CASE 2:
---- input:
tambaqui
---- correct output:
Entrada: tambaqui
Brasao invalido
---- user output:
Entrada: lula
Greyjoy
-- TEST CASE 3:
---- input:
dragao
---- correct output:
Entrada: dragao
Casa: Targaryen
---- user output:
Entrada: tambaqui
Brasao invalido
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-25 11:26:12) 
-- CODE:
# Teste seu código aos poucos. Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo. Teste as diversas possibilidades de saída
b = input("Brasao:").lower()

print("Entrada:", b)

if(b == "lobo"):
	print("Stark")
elif(b == "leao"):
	print("Lannister")
elif(b == "veado"):
	print("Baratheon")
elif(b == "dragao"):
	print("Targaryen")
elif(b == "rosa"):
	print("Tyrell")
elif(b == "sol"):
	print("Martell")
elif(b == "lula"):
	print("Greyjoy")
elif(b == "esfolado"):
	print("Bolton")
elif(b == "turta"):
	print("Tully")
elif(b != "lobo" and b != "leao" and b != "veado" and b != "dragao" and b != "rosa" and b != "sol" and b != "lula" and b != "esfolado" and b != "turta"):
	print("Brasao invalido")
-- EXECUTION TIME:
0.216144
-- TEST CASE 1:
---- input:
lula
---- correct output:
Entrada: lula
Casa: Greyjoy
---- user output:
Entrada: tambaqui
Brasao invalido
-- TEST CASE 2:
---- input:
tambaqui
---- correct output:
Entrada: tambaqui
Brasao invalido
---- user output:
Entrada: lula
Greyjoy
-- TEST CASE 3:
---- input:
dragao
---- correct output:
Entrada: dragao
Casa: Targaryen
---- user output:
Entrada: lula
Greyjoy
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-25 11:26:13) 
-- CODE:
# Teste seu código aos poucos. Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo. Teste as diversas possibilidades de saída
b = input("Brasao:").lower()

print("Entrada:", b)

if(b == "lobo"):
	print("Stark")
elif(b == "leao"):
	print("Lannister")
elif(b == "veado"):
	print("Baratheon")
elif(b == "dragao"):
	print("Targaryen")
elif(b == "rosa"):
	print("Tyrell")
elif(b == "sol"):
	print("Martell")
elif(b == "lula"):
	print("Greyjoy")
elif(b == "esfolado"):
	print("Bolton")
elif(b == "turta"):
	print("Tully")
elif(b != "lobo" and b != "leao" and b != "veado" and b != "dragao" and b != "rosa" and b != "sol" and b != "lula" and b != "esfolado" and b != "turta"):
	print("Brasao invalido")
-- EXECUTION TIME:
0.227345
-- TEST CASE 1:
---- input:
lula
---- correct output:
Entrada: lula
Casa: Greyjoy
---- user output:
Entrada: tambaqui
Brasao invalido
-- TEST CASE 2:
---- input:
tambaqui
---- correct output:
Entrada: tambaqui
Brasao invalido
---- user output:
Entrada: lula
Greyjoy
-- TEST CASE 3:
---- input:
dragao
---- correct output:
Entrada: dragao
Casa: Targaryen
---- user output:

-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-25 11:26:13) 
-- CODE:
# Teste seu código aos poucos. Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo. Teste as diversas possibilidades de saída
b = input("Brasao:").lower()

print("Entrada:", b)

if(b == "lobo"):
	print("Stark")
elif(b == "leao"):
	print("Lannister")
elif(b == "veado"):
	print("Baratheon")
elif(b == "dragao"):
	print("Targaryen")
elif(b == "rosa"):
	print("Tyrell")
elif(b == "sol"):
	print("Martell")
elif(b == "lula"):
	print("Greyjoy")
elif(b == "esfolado"):
	print("Bolton")
elif(b == "turta"):
	print("Tully")
elif(b != "lobo" and b != "leao" and b != "veado" and b != "dragao" and b != "rosa" and b != "sol" and b != "lula" and b != "esfolado" and b != "turta"):
	print("Brasao invalido")
-- EXECUTION TIME:
0.498138
-- TEST CASE 1:
---- input:
lula
---- correct output:
Entrada: lula
Casa: Greyjoy
---- user output:
Entrada: lula
Greyjoy
-- TEST CASE 2:
---- input:
tambaqui
---- correct output:
Entrada: tambaqui
Brasao invalido
---- user output:
Entrada: dragao
Targaryen
-- TEST CASE 3:
---- input:
dragao
---- correct output:
Entrada: dragao
Casa: Targaryen
---- user output:
Entrada: lula
Greyjoy
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-25 11:26:13) 
-- CODE:
# Teste seu código aos poucos. Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo. Teste as diversas possibilidades de saída
b = input("Brasao:").lower()

print("Entrada:", b)

if(b == "lobo"):
	print("Stark")
elif(b == "leao"):
	print("Lannister")
elif(b == "veado"):
	print("Baratheon")
elif(b == "dragao"):
	print("Targaryen")
elif(b == "rosa"):
	print("Tyrell")
elif(b == "sol"):
	print("Martell")
elif(b == "lula"):
	print("Greyjoy")
elif(b == "esfolado"):
	print("Bolton")
elif(b == "turta"):
	print("Tully")
elif(b != "lobo" and b != "leao" and b != "veado" and b != "dragao" and b != "rosa" and b != "sol" and b != "lula" and b != "esfolado" and b != "turta"):
	print("Brasao invalido")
-- EXECUTION TIME:
0.629378
-- TEST CASE 1:
---- input:
lula
---- correct output:
Entrada: lula
Casa: Greyjoy
---- user output:
Entrada: lula
Greyjoy
-- TEST CASE 2:
---- input:
tambaqui
---- correct output:
Entrada: tambaqui
Brasao invalido
---- user output:
Entrada: lula
Greyjoy
-- TEST CASE 3:
---- input:
dragao
---- correct output:
Entrada: dragao
Casa: Targaryen
---- user output:
Entrada: dragao
Targaryen
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-25 11:26:14) 
-- CODE:
# Teste seu código aos poucos. Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo. Teste as diversas possibilidades de saída
b = input("Brasao:").lower()

print("Entrada:", b)

if(b == "lobo"):
	print("Stark")
elif(b == "leao"):
	print("Lannister")
elif(b == "veado"):
	print("Baratheon")
elif(b == "dragao"):
	print("Targaryen")
elif(b == "rosa"):
	print("Tyrell")
elif(b == "sol"):
	print("Martell")
elif(b == "lula"):
	print("Greyjoy")
elif(b == "esfolado"):
	print("Bolton")
elif(b == "turta"):
	print("Tully")
elif(b != "lobo" and b != "leao" and b != "veado" and b != "dragao" and b != "rosa" and b != "sol" and b != "lula" and b != "esfolado" and b != "turta"):
	print("Brasao invalido")
-- EXECUTION TIME:
0.471042
-- TEST CASE 1:
---- input:
lula
---- correct output:
Entrada: lula
Casa: Greyjoy
---- user output:
Entrada: lula
Greyjoy
-- TEST CASE 2:
---- input:
tambaqui
---- correct output:
Entrada: tambaqui
Brasao invalido
---- user output:
Entrada: tambaqui
Brasao invalido
-- TEST CASE 3:
---- input:
dragao
---- correct output:
Entrada: dragao
Casa: Targaryen
---- user output:

-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-25 11:26:14) 
-- CODE:
# Teste seu código aos poucos. Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo. Teste as diversas possibilidades de saída
b = input("Brasao:").lower()

print("Entrada:", b)

if(b == "lobo"):
	print("Stark")
elif(b == "leao"):
	print("Lannister")
elif(b == "veado"):
	print("Baratheon")
elif(b == "dragao"):
	print("Targaryen")
elif(b == "rosa"):
	print("Tyrell")
elif(b == "sol"):
	print("Martell")
elif(b == "lula"):
	print("Greyjoy")
elif(b == "esfolado"):
	print("Bolton")
elif(b == "turta"):
	print("Tully")
elif(b != "lobo" and b != "leao" and b != "veado" and b != "dragao" and b != "rosa" and b != "sol" and b != "lula" and b != "esfolado" and b != "turta"):
	print("Brasao invalido")
-- EXECUTION TIME:
0.406322
-- ERROR:
sh: 1: cannot open /home/codebench/codes/1674/1105/cbtemp.txt: No such file

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-25 11:26:14) 
-- CODE:
# Teste seu código aos poucos. Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo. Teste as diversas possibilidades de saída
b = input("Brasao:").lower()

print("Entrada:", b)

if(b == "lobo"):
	print("Stark")
elif(b == "leao"):
	print("Lannister")
elif(b == "veado"):
	print("Baratheon")
elif(b == "dragao"):
	print("Targaryen")
elif(b == "rosa"):
	print("Tyrell")
elif(b == "sol"):
	print("Martell")
elif(b == "lula"):
	print("Greyjoy")
elif(b == "esfolado"):
	print("Bolton")
elif(b == "turta"):
	print("Tully")
elif(b != "lobo" and b != "leao" and b != "veado" and b != "dragao" and b != "rosa" and b != "sol" and b != "lula" and b != "esfolado" and b != "turta"):
	print("Brasao invalido")
-- OUTPUT:
Entrada: lula
Greyjoy
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-25 11:26:14) 
-- CODE:
# Teste seu código aos poucos. Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo. Teste as diversas possibilidades de saída
b = input("Brasao:").lower()

print("Entrada:", b)

if(b == "lobo"):
	print("Stark")
elif(b == "leao"):
	print("Lannister")
elif(b == "veado"):
	print("Baratheon")
elif(b == "dragao"):
	print("Targaryen")
elif(b == "rosa"):
	print("Tyrell")
elif(b == "sol"):
	print("Martell")
elif(b == "lula"):
	print("Greyjoy")
elif(b == "esfolado"):
	print("Bolton")
elif(b == "turta"):
	print("Tully")
elif(b != "lobo" and b != "leao" and b != "veado" and b != "dragao" and b != "rosa" and b != "sol" and b != "lula" and b != "esfolado" and b != "turta"):
	print("Brasao invalido")
-- EXECUTION TIME:
0.618232
-- TEST CASE 1:
---- input:
lula
---- correct output:
Entrada: lula
Casa: Greyjoy
---- user output:
Entrada: lula
Greyjoy
-- TEST CASE 2:
---- input:
tambaqui
---- correct output:
Entrada: tambaqui
Brasao invalido
---- user output:
Brasao:Entrada: tambaqui
Brasao invalido
-- TEST CASE 3:
---- input:
dragao
---- correct output:
Entrada: dragao
Casa: Targaryen
---- user output:

-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-25 11:26:14) 
-- CODE:
# Teste seu código aos poucos. Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo. Teste as diversas possibilidades de saída
b = input("Brasao:").lower()

print("Entrada:", b)

if(b == "lobo"):
	print("Stark")
elif(b == "leao"):
	print("Lannister")
elif(b == "veado"):
	print("Baratheon")
elif(b == "dragao"):
	print("Targaryen")
elif(b == "rosa"):
	print("Tyrell")
elif(b == "sol"):
	print("Martell")
elif(b == "lula"):
	print("Greyjoy")
elif(b == "esfolado"):
	print("Bolton")
elif(b == "turta"):
	print("Tully")
elif(b != "lobo" and b != "leao" and b != "veado" and b != "dragao" and b != "rosa" and b != "sol" and b != "lula" and b != "esfolado" and b != "turta"):
	print("Brasao invalido")
-- EXECUTION TIME:
0.392492
-- TEST CASE 1:
---- input:
lula
---- correct output:
Entrada: lula
Casa: Greyjoy
---- user output:
Entrada: lula
Greyjoy
-- TEST CASE 2:
---- input:
tambaqui
---- correct output:
Entrada: tambaqui
Brasao invalido
---- user output:
Brasao:Entrada: dragao
Targaryen
-- TEST CASE 3:
---- input:
dragao
---- correct output:
Entrada: dragao
Casa: Targaryen
---- user output:

-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-25 11:26:22) 
-- CODE:
# Teste seu código aos poucos. Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo. Teste as diversas possibilidades de saída
b = input("Brasao:").lower()

print("Entrada:", b)

if(b == "lobo"):
	print("Stark")
elif(b == "leao"):
	print("Lannister")
elif(b == "veado"):
	print("Baratheon")
elif(b == "dragao"):
	print("Targaryen")
elif(b == "rosa"):
	print("Tyrell")
elif(b == "sol"):
	print("Martell")
elif(b == "lula"):
	print("Greyjoy")
elif(b == "esfolado"):
	print("Bolton")
elif(b == "turta"):
	print("Tully")
elif(b != "lobo" and b != "leao" and b != "veado" and b != "dragao" and b != "rosa" and b != "sol" and b != "lula" and b != "esfolado" and b != "turta"):
	print("Brasao invalido")
-- OUTPUT:
Entrada: lula
Greyjoy
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-25 11:26:45) 
-- CODE:
# Teste seu código aos poucos. Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo. Teste as diversas possibilidades de saída
b = input("Brasao:").lower()

print("Entrada:",b)

if(b == "lobo"):
	print("Stark")
elif(b == "leao"):
	print("Lannister")
elif(b == "veado"):
	print("Baratheon")
elif(b == "dragao"):
	print("Targaryen")
elif(b == "rosa"):
	print("Tyrell")
elif(b == "sol"):
	print("Martell")
elif(b == "lula"):
	print("Greyjoy")
elif(b == "esfolado"):
	print("Bolton")
elif(b == "turta"):
	print("Tully")
elif(b != "lobo" and b != "leao" and b != "veado" and b != "dragao" and b != "rosa" and b != "sol" and b != "lula" and b != "esfolado" and b != "turta"):
	print("Brasao invalido")
-- EXECUTION TIME:
0.203592
-- TEST CASE 1:
---- input:
lula
---- correct output:
Entrada: lula
Casa: Greyjoy
---- user output:
Entrada: lula
Greyjoy
-- TEST CASE 2:
---- input:
tambaqui
---- correct output:
Entrada: tambaqui
Brasao invalido
---- user output:
Entrada: tambaqui
Brasao invalido
-- TEST CASE 3:
---- input:
dragao
---- correct output:
Entrada: dragao
Casa: Targaryen
---- user output:
Entrada: dragao
Targaryen
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-25 11:27:33) 
-- CODE:
# Teste seu código aos poucos. Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo. Teste as diversas possibilidades de saída
b = input("Brasao:").lower()

print("Entrada:", b)

if(b == "lobo"):
	print("Stark")
elif(b == "leao"):
	print("Lannister")
elif(b == "veado"):
	print("Baratheon")
elif(b == "dragao"):
	print("Targaryen")
elif(b == "rosa"):
	print("Tyrell")
elif(b == "sol"):
	print("Martell")
elif(b == "lula"):
	print("Greyjoy")
elif(b == "esfolado"):
	print("Bolton")
elif(b == "turta"):
	print("Tully")
elif(b != "lobo" and b != "leao" and b != "veado" and b != "dragao" and b != "rosa" and b != "sol" and b != "lula" and b != "esfolado" and b != "turta"):
	print("Brasao invalido")
-- OUTPUT:
Entrada: lula
Greyjoy
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-25 11:28:24) 
-- CODE:
# Teste seu código aos poucos. Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo. Teste as diversas possibilidades de saída
b = input("Brasao:").lower()

print("Entrada:", b)

if(b == "lobo"):
	print("Casa: Stark")
elif(b == "leao"):
	print("Casa: Lannister")
elif(b == "veado"):
	print("Casa: Baratheon")
elif(b == "dragao"):
	print("Casa: Targaryen")
elif(b == "rosa"):
	print("Casa: Tyrell")
elif(b == "sol"):
	print("Casa: Martell")
elif(b == "lula"):
	print("Casa: Greyjoy")
elif(b == "esfolado"):
	print("Casa: Bolton")
elif(b == "turta"):
	print("Casa: Tully")
elif(b != "lobo" and b != "leao" and b != "veado" and b != "dragao" and b != "rosa" and b != "sol" and b != "lula" and b != "esfolado" and b != "turta"):
	print("Brasao invalido")
-- EXECUTION TIME:
0.10731
-- TEST CASE 1:
---- input:
lula
---- correct output:
Entrada: lula
Casa: Greyjoy
---- user output:
Entrada: lula
Casa: Greyjoy
-- TEST CASE 2:
---- input:
tambaqui
---- correct output:
Entrada: tambaqui
Brasao invalido
---- user output:
Entrada: tambaqui
Brasao invalido
-- TEST CASE 3:
---- input:
dragao
---- correct output:
Entrada: dragao
Casa: Targaryen
---- user output:
Entrada: dragao
Casa: Targaryen
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
